Fix previous and next arrow alignment

--- a/react-datepicker.css
+++ b/react-datepicker.css
@@ -59,7 +59,7 @@
   text-align: center;
   cursor: pointer;
   position: absolute;
-  top: 5px;
+  top: 10px;
   width: 0;
   border: 6px solid transparent; }
   .datepicker__navigation--previous {
