--- a/src/stylesheets/datepicker.scss
+++ b/src/stylesheets/datepicker.scss
@@ -45,7 +45,7 @@
   text-align: center;
   cursor: pointer;
   position: absolute;
-  top: 5px;
+  top: 10px;
   width: 0;
   border: 6px solid transparent;
 
